2001-03-10 22:55 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
  * source/lang/msgru866.c
  * source/lang/msgruwin.c
    + Added harbour license
    * Messages translated to Russian

2001-03-08 15:00 UTC-0500 David G. Holm <dholm@jsd-llc.com>
  + COPYING
    + Added the GNU General Public License file

2001-03-08 13:00 UTC-0500 David G. Holm <dholm@jsd-llc.com>
  * tests/inkeytst.prg
  * tests/longdev.prg
  * tests/output.prg
  * tests/readfile.prg
  * tests/round.prg
  * tests/scroll.prg
  * tests/seconds.prg
    * Donated to the public domain.

2001-03-07 21:31 GMT-3 Horacio Roldan <horacioroldan@usa.net>
   * harbour/source/rdd/dbfcdx1.h
   * harbour/source/rdd/dbfcdx2.h
     + Added harbour license

2001-03-07 16:15 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Corrcted typos oError -> oErr

2001-03-07 10:50 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     ! fixed skipping for some special cases
     + hb_ntxSortKeyAdd()
       * Sorting of keys
     + hb_ntxRootPage()
     + hb_ntxBufferSave()
       * Building index from sorted keys
     + hb_ntxReadBuf()
       * read buffering
     * Index creating is fully rewritten.
       Now DBFNTX creates good balanced B-trees ( as CA-Clipper )
       and works faster than before.

2001-03-04 16:40 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     * Completed management of Variable Scoping.
     * Modified rest of Error Handlers to check type of :Args (Harbour bug).

   * contrib/dot/test.prg
     + Added test of private value after function call

2001-03-02 23:00 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/macro/macroslx.c
     + Added copyright notice with the Harbour Exception.

2001-03-02 22:50 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * contrib/dot/pp.prg
     ! Fixed handling of [Smart] Stringify of a period terminated macro.

2001-03-02 09:10 UTC-0800 Ron Pinkas <ron@profit-master.com>